Bug 1384719 - Fix -Wnull-conversion warning in nsStyleContext::CalcStyleDifference(). r=heycam

MozReview-Commit-ID: FBYcQ2fbIFo

--HG--
extra : rebase_source : 7ef60d0fd895eb1604aa11b1c41f7b21586d637d